# Interview-RAG

./: 个人.docx
Interview-RAG-Frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Interview-RAG-Frontend/src/: App.tsx
Interview-RAG-Frontend/src/api/: client.ts
Interview-RAG-Frontend/src/components/: NoteCard.tsx  NoteForm.tsx  Skeleton.tsx
Interview-RAG-Frontend/src/hooks/: useNotes.ts
Interview-RAG-Frontend/src/layouts/: MainLayout.tsx
Interview-RAG-Frontend/src/pages/: DashboardPage.tsx  NotesPage.tsx
Interview-RAG-Frontend/src/types/: index.ts
backend/: .gitignore  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/api/: notes.py
backend/app/core/: config.py  exceptions.py  schemas.py
backend/app/services/: notes.py
crawler/: main.py  pyproject.toml
test/: call.js  debounce.js  deepClone.js  flat.js  instanceof.js  promiseAll.js  throttle.js  unique.js  两数之和,返回下标.js
test/vue/: Vue3 底层原理.md  vite编译、打包流程.md  vue-router.md  响应式原理.md  生命周期对比.md  虚拟DOM.md
test/利器/: 前端资源优化..md  大文件切片.md
test/李琦/: GC.md  http1.1和http2.md  从输入 URL 到页面渲染.md  地图.txt  浏览器事件循环.md  重绘、回流.md
留一手/: 808.txt  bfi(web).txt  chat-bfi(server).txt  chat-bfi(web).txt
