[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "pycryptodome>=3.23.0",
    "requests>=2.33.1",
    "scrapling[all]>=0.4.7",
]
